import type { InitiativeCore } from "./initiative.js";

/** Program — distinct from Project (different core narrative + distinct point codes). */
export type Program = InitiativeCore;
