import type { InitiativeCore } from "./initiative.js";

/** Project — distinct from Program. Dossier fields (C2) still pending award criteria. */
export type Project = InitiativeCore;
